# gamepad-keyboard-mapper-tauri

./: .gitignore  README.md  WINDOWS_BUILD_FIX.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: check.sh
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: GamepadVisual.css  GamepadVisual.tsx  KeyPicker.css  KeyPicker.tsx  MappingRow.css  MappingRow.tsx
src/services/: gamepad.ts  mapper.ts  storage.ts
